tests/NormalTests/paczka1/fuzzy1/76518500.err
Error in line 4: fNXpW1O A430 84,w
Error in line 5: Y1Akx6wZToD S683 51,3
Error in line 6: fNXpW1O A430 327,7
Error in line 12: S713 A992 48,5
Error in line 27: S713 S713 44,2
Error in line 33: 3GjhlPtGy9i A992 63,9
